# gemm

./: .gitignore  Cargo.toml  build.rs  stats.sh
demo/: Cargo.toml
demo/src/: main.rs
src/: aligned_alloc.rs  dim.rs  executor.rs  gemm.rs  lib.rs  main.rs  matrix.rs  sgemm.rs  stats.sh
src/kernel/: mod.rs
src/kernel/avx/: fma.rs  l1s.rs  l3s.rs  mod.rs
src/kernel/generic/: l3s.rs  mod.rs
src/kernel/sse/: fma.rs  l1d.rs  l3d.rs  l3s.rs  mod.rs
src/test/: l3s.rs  mod.rs
