[package]
name = "gemm"
version = "0.1.0"
authors = ["Andrey Tkachenko <andreytkachenko64@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
blas = "0.20.0"
openblas = "0.0.1"
crunchy = "0.2.2"
rayon = "1.2.1"
threadpool = "1.7.1"

[profile.release]
debug = true
