[package]
name = "demo"
version = "0.1.0"
authors = ["Andrey Tkachenko <andreytkachenko64@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gemm = {path="../"}
openblas = "0.0.1"
blas = "0.20.0"
rand = "0.7.2"
